Update Dockerfile
Signed-off-by: Hyeonjae <150680501+hyeonjae1122@users.noreply.github.com>