@@ -1,5 +1,9 @@
 FROM maven:3.9-eclipse-temurin-25 AS build
 WORKDIR /app
+
+# Set Maven options for more memory
+ENV MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m"
+
 COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
